--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "profile-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://avanishranjan19941.github.io/My_Profile",
   "dependencies": {
     "@carbon/icons-react": "^11.44.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -31,7 +32,9 @@
     "eject": "react-scripts eject",
     "clean": "rimraf build",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
